--- a/plugin.video.thestreamzone/changelog.txt
+++ b/plugin.video.thestreamzone/changelog.txt
@@ -1,12 +1,1 @@
-v1.1
-based on bob 1.0.12
-
-Added "plugin" system, see plugin.py
-Added most strings to strings.po
-Added hebrew translation (thanks Eng2Heb)
-Added Search and Search db generation script
-Loads of bugfixes
-
-Release 1.0.0 initial release
-
-based on bob 1.0.1
+The Stream Zone 3.7:  Changed resolver from urlresolver to resolveurl
